# Console

obuchaika-master/: CMakeLists.txt
obuchaika-master/matematika/: main.cpp  menu.hpp  menu_functions.cpp  menu_functions.hpp  menu_items.cpp  menu_items.hpp
